--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.7.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "router": "^1.3.8"
   }
