--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
@@ -22,6 +23,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "router": "^1.3.8",
+    "stripe": "^17.3.1",
     "uuidv1": "^1.6.14"
   }
 }
