--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "version": 2,
+   "functions": {
+    "api/categories.js": { "memory": 256 },
+    "api/products.js": { "memory": 256 },
+    "api/users.js": { "memory": 256 },
+    "api/orders.js": { "memory": 256 },
+    "api/payments.js": { "memory": 256 }
+  }
   "builds": [
     {
       "src": "server.js",
