--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "functions": {
-    "api/categories.js": { "memory": 256 },
-    "api/products.js": { "memory": 256 },
-    "api/users.js": { "memory": 256 },
-    "api/orders.js": { "memory": 256 },
-    "api/payments.js": { "memory": 256 }
+    "routes/categoryRoute.js": { "memory": 256 },
+    "routes/orderRoute.js": { "memory": 256 },
+    "routes/paymentRoute.js": { "memory": 256 },
+    "routes/productRoute.js": { "memory": 256 },
+    "routes/userRoute.js": { "memory": 256 }
   }
 }
