--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "functions": {
-    "routes/categoryRoute.js": { "memory": 256 },
-    "routes/orderRoute.js": { "memory": 256 },
-    "routes/paymentRoute.js": { "memory": 256 },
-    "routes/productRoute.js": { "memory": 256 },
-    "routes/userRoute.js": { "memory": 256 }
+    "api/categoryRoute.js": { "memory": 256 },
+    "api/orderRoute.js": { "memory": 256 },
+    "api/paymentRoute.js": { "memory": 256 },
+    "api/productRoute.js": { "memory": 256 },
+    "api/userRoute.js": { "memory": 256 }
   }
 }
