--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/categoryRoute.js": { "memory": 256 },
-    "api/orderRoute.js": { "memory": 256 },
-    "api/paymentRoute.js": { "memory": 256 },
-    "api/productRoute.js": { "memory": 256 },
-    "api/userRoute.js": { "memory": 256 }
-  }
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
+  ]
 }
